--- a/telaJogo.html
+++ b/telaJogo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jogo de Programação - Bombeiro</title>
+  <title>Bombeiro ao Resgate</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
